--- a/app/src/main/res/layout/flash_card_layout_back.xml
+++ b/app/src/main/res/layout/flash_card_layout_back.xml
@@ -121,6 +121,7 @@
         </LinearLayout>
 
         <TextView
+            android:id="@+id/tvFurtherSpec"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book."
