--- a/app/src/main/res/layout/fragment_confirm_transfer.xml
+++ b/app/src/main/res/layout/fragment_confirm_transfer.xml
@@ -2,7 +2,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <LinearLayout
         android:orientation="vertical"
@@ -52,7 +53,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
-                    android:layout_marginTop="@dimen/activity_margin_16dp">
+                    android:layout_marginTop="@dimen/activity_margin_4dp">
 
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -163,14 +164,31 @@
                             android:layout_marginRight="@dimen/activity_margin_8dp"
                             android:orientation="vertical">
 
-                            <TextView
-                                android:id="@+id/tvReceiverName"
-                                android:layout_width="wrap_content"
+                            <LinearLayout
+                                android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:text="Bárbara Cotilla"
-                                android:textStyle="bold"
-                                android:textColor="@android:color/black"
-                                android:textSize="@dimen/text_size_xlarge"/>
+                                android:orientation="horizontal"
+                                android:gravity="center_vertical">
+
+                                <TextView
+                                    android:id="@+id/tvReceiverName"
+                                    android:layout_width="0dp"
+                                    android:layout_height="wrap_content"
+                                    android:layout_weight="1"
+                                    android:text="Bárbara Cotilla"
+                                    android:textStyle="bold"
+                                    android:textColor="@android:color/black"
+                                    android:textSize="@dimen/text_size_xlarge"/>
+
+                                <de.hdodenhof.circleimageview.CircleImageView
+                                    android:id="@+id/ivReceiverAvatar"
+                                    android:layout_width="25dp"
+                                    android:layout_height="25dp"
+                                    android:src="@drawable/ic_default_user"
+                                    app:civ_border_color="@color/colorBlueGreen"
+                                    app:civ_border_width="1dp"/>
+
+                            </LinearLayout>
 
                             <TextView
                                 android:id="@+id/tvReceiverEosName"
@@ -178,7 +196,6 @@
                                 android:layout_height="33dp"
                                 android:text="5Kb8kLf9zgWQnogidDA76MzPL6maiP98M"
                                 android:textSize="@dimen/text_size_default"
-                                android:layout_marginTop="@dimen/activity_margin_4dp"
                                 android:textColor="@android:color/black"
                                 android:gravity="center_vertical"/>
 
