--- a/app/src/main/res/layout/layout_drawer_menu.xml
+++ b/app/src/main/res/layout/layout_drawer_menu.xml
@@ -21,27 +21,19 @@
         android:orientation="vertical">
 
         <ImageView
-            android:id="@+id/ivAddressNonLogin"
+            android:id="@+id/ivAvatarNonLogin"
             android:src="@drawable/ic_default_sneaker_header_navigation"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
 
-        <androidx.cardview.widget.CardView
-            android:id="@+id/cvQrAddress"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:cardCornerRadius="4dp"
-            app:cardElevation="0dp"
-            android:visibility="gone">
-
-            <ImageView
-                android:id="@+id/ivQrAddress"
-                android:layout_width="80dp"
-                android:layout_height="80dp"
-                android:src="@color/colorPutty"
-                android:layout_centerInParent="true"/>
-
-        </androidx.cardview.widget.CardView>
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/ivAvatar"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:src="@drawable/ic_default_sneaker_header_navigation"
+            app:civ_border_width="1dp"
+            app:civ_border_color="@color/colorBlueGreen"
+            android:visibility="gone"/>
 
         <TextView
             android:id="@+id/tvUserName"
