--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -1,157 +1,143 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+<androidx.coordinatorlayout.widget.CoordinatorLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/root"
-    android:background="@android:color/white"
-    tools:context=".screens.fragment.LoginFragment">
+    android:background="@android:color/white">
 
-    <ImageButton
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/ic_back"
-        android:background="@android:color/transparent"
-        android:padding="@dimen/activity_margin_12dp"
-        android:layout_marginLeft="12dp"
-        app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginTop="@dimen/activity_margin_4dp"
-        app:layout_constraintTop_toTopOf="parent"
-        android:id="@+id/ibBack"/>
+    <include layout="@layout/layout_header" />
 
-    <TextView
-        android:id="@+id/title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/label_log_in"
-        android:textSize="@dimen/text_size_big"
-        android:textColor="@color/colorBlack"
-        android:textStyle="bold"
-        android:layout_marginLeft="@dimen/activity_margin_24dp"
-        app:layout_constraintTop_toBottomOf="@+id/ibBack"
-        app:layout_constraintStart_toStartOf="parent"/>
-
-    <LinearLayout
-        android:orientation="vertical"
+    <FrameLayout
+        android:id="@+id/root"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/title"
-        android:layout_marginTop="40dp"
-        android:layout_marginHorizontal="@dimen/activity_margin_24dp"
-        android:id="@+id/linearLayout">
-
-        <RelativeLayout
-            android:layout_width="170dp"
-            android:layout_height="50dp"
-            android:background="@drawable/drawable_bg_country_code_picker"
-            android:padding="@dimen/activity_margin_4dp">
-
-            <com.hbb20.CountryCodePicker
-                android:id="@+id/pickerCountryCode"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:ccp_contentColor="@color/colorOffWhite"
-                app:ccp_showFullName="true"
-                app:ccp_showNameCode="false"
-                app:ccp_defaultNameCode="VN"
-                app:ccp_textSize="@dimen/text_size_large"
-                app:ccp_showFlag="false"
-                android:layout_centerInParent="true"/>
-
-        </RelativeLayout>
-
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:inputType="numberDecimal"
-            android:textSize="@dimen/text_size_large"
-            android:hint="@string/text_holder_user_phone"
-            android:id="@+id/etUserPhone"
-            android:drawableLeft="@drawable/ic_phone"
-            android:drawableTint="@color/colorDarkTurquoise"
-            android:drawablePadding="@dimen/activity_margin_12dp"
-            android:paddingVertical="@dimen/activity_margin_12dp"
-            android:paddingHorizontal="@dimen/activity_margin_16dp"
-            android:layout_marginTop="@dimen/activity_margin_16dp"
-            android:background="@drawable/bubble_background_green"
-            android:maxLength="9"
-            android:textColor="@color/colorDarkTurquoise">
-        </EditText>
+        android:layout_height="match_parent"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
         <LinearLayout
-            android:id="@+id/llGotoSignup"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_gravity="center_horizontal"
-            android:gravity="center_vertical"
-            android:layout_marginTop="@dimen/activity_margin_10dp"
-            android:padding="@dimen/activity_margin_4dp">
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
-            <TextView
+            <LinearLayout
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="40dp"
+                android:layout_marginHorizontal="@dimen/activity_margin_24dp"
+                android:id="@+id/linearLayout">
+
+                <RelativeLayout
+                    android:layout_width="170dp"
+                    android:layout_height="50dp"
+                    android:background="@drawable/drawable_bg_country_code_picker"
+                    android:padding="@dimen/activity_margin_4dp">
+
+                    <com.hbb20.CountryCodePicker
+                        android:id="@+id/pickerCountryCode"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        app:ccp_contentColor="@color/colorOffWhite"
+                        app:ccp_showFullName="true"
+                        app:ccp_showNameCode="false"
+                        app:ccp_defaultNameCode="VN"
+                        app:ccp_textSize="@dimen/text_size_large"
+                        app:ccp_showFlag="false"
+                        android:layout_centerInParent="true"/>
+
+                </RelativeLayout>
+
+                <EditText
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:inputType="numberDecimal"
+                    android:textSize="@dimen/text_size_large"
+                    android:hint="@string/text_holder_user_phone"
+                    android:id="@+id/etUserPhone"
+                    android:drawableLeft="@drawable/ic_phone"
+                    android:drawableTint="@color/colorDarkTurquoise"
+                    android:drawablePadding="@dimen/activity_margin_12dp"
+                    android:paddingVertical="@dimen/activity_margin_12dp"
+                    android:paddingHorizontal="@dimen/activity_margin_16dp"
+                    android:layout_marginTop="@dimen/activity_margin_16dp"
+                    android:background="@drawable/bubble_background_green"
+                    android:maxLength="9"
+                    android:textColor="@color/colorDarkTurquoise">
+                </EditText>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/llGotoSignup"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Let's sign up"
-                android:textColor="@color/colorBlueGreen" />
+                android:orientation="horizontal"
+                android:layout_gravity="center_horizontal"
+                android:gravity="center_vertical"
+                android:layout_marginTop="@dimen/activity_margin_10dp"
+                android:padding="@dimen/activity_margin_4dp">
 
-            <ImageView
-                android:layout_width="18dp"
-                android:layout_height="18dp"
-                android:src="@drawable/ic_back"
-                android:rotation="180"
-                android:tint="@color/colorBlueGreen"
-                android:layout_marginTop="2dp"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Let's sign up"
+                    android:textColor="@color/colorBlueGreen"
+                    android:textStyle="bold"/>
+
+                <ImageView
+                    android:layout_width="18dp"
+                    android:layout_height="18dp"
+                    android:src="@drawable/ic_back"
+                    android:rotation="180"
+                    android:tint="@color/colorBlueGreen"
+                    android:layout_marginTop="2dp"
+                    android:layout_marginStart="@dimen/activity_margin_4dp"/>
+
+            </LinearLayout>
+
+            <TextView
+                android:id="@+id/tvWarning"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/text_message_incorrect_password"
+                android:layout_marginTop="@dimen/activity_margin_16dp"
+                android:padding="@dimen/activity_margin_12dp"
+                android:textColor="@color/colorOrangish"
+                android:lineSpacingExtra="4dp"
+                android:textSize="@dimen/text_size_large"
+                android:background="@drawable/warning_background"
+                android:layout_marginHorizontal="@dimen/activity_margin_24dp"
+                android:visibility="gone"
+                />
+
+            <View
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:layout_weight="1"/>
+
+            <TextView
+                android:id="@+id/btnLogin"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/drawable_btn_green_gradient_selector"
+                android:text="@string/label_button_login"
+                android:layout_marginBottom="@dimen/activity_margin_68dp"
+                android:textColor="@color/colorWhite"
+                android:enabled="false"
+                android:gravity="center"
+                android:textStyle="bold"
+                android:textSize="@dimen/text_size_xlarge"
+                android:padding="@dimen/activity_margin_16dp"
+                android:layout_marginHorizontal="@dimen/activity_margin_24dp"
+                />
 
         </LinearLayout>
 
-    </LinearLayout>
+        <include
+            android:id="@+id/pb_loading"
+            layout="@layout/loading_medium"
+            android:visibility="gone"/>
 
-    <TextView
-        android:id="@+id/btnLogin"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@drawable/drawable_btn_green_gradient_selector"
-        android:text="@string/label_button_login"
-        android:layout_marginBottom="@dimen/activity_margin_24dp"
-        android:textColor="@color/colorWhite"
-        android:enabled="false"
-        android:gravity="center"
-        android:textStyle="bold"
-        android:textSize="@dimen/text_size_xlarge"
-        android:padding="@dimen/activity_margin_16dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginHorizontal="@dimen/activity_margin_24dp"
-    />
+    </FrameLayout>
 
-    <TextView
-        android:id="@+id/tvWarning"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/text_message_incorrect_password"
-        android:layout_marginTop="@dimen/activity_margin_16dp"
-        android:padding="@dimen/activity_margin_12dp"
-        android:textColor="@color/colorOrangish"
-        android:lineSpacingExtra="4dp"
-        android:textSize="@dimen/text_size_large"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
-        android:background="@drawable/warning_background"
-        android:layout_marginHorizontal="@dimen/activity_margin_24dp"
-        android:visibility="gone"
-    />
-
-    <include
-        android:id="@+id/pb_loading"
-        layout="@layout/loading_medium"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:visibility="gone"/>
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
