--- a/app/src/main/res/layout/activity_collection.xml
+++ b/app/src/main/res/layout/activity_collection.xml
@@ -13,10 +13,10 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginTop="@dimen/activity_margin_4dp"
+        android:layout_marginTop="@dimen/activity_margin_6dp"
+        android:layout_marginStart="@dimen/activity_margin_6dp"
         android:background="@android:color/transparent"
-        android:padding="@dimen/activity_margin_12dp"
-        android:layout_marginLeft="@dimen/activity_margin_12dp"
+        android:padding="@dimen/activity_margin_10dp"
         android:src="@drawable/ic_back"/>
 
     <RelativeLayout
@@ -24,7 +24,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/btnBack"
-        android:layout_marginLeft="@dimen/activity_margin_24dp"
+        android:layout_marginLeft="@dimen/activity_margin_16dp"
         android:layout_marginRight="@dimen/activity_margin_14dp">
 
         <TextView
