--- a/app/src/main/res/layout/activity_custom_scan.xml
+++ b/app/src/main/res/layout/activity_custom_scan.xml
@@ -11,20 +11,20 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginRight="@dimen/activity_margin_12dp"
-        android:padding="@dimen/activity_margin_12dp"
-        android:layout_marginTop="@dimen/activity_margin_4dp"
+        android:layout_marginTop="@dimen/activity_margin_6dp"
+        android:layout_marginEnd="@dimen/activity_margin_6dp"
+        android:padding="@dimen/activity_margin_10dp"
         android:src="@drawable/ic_close"
         android:tint="@android:color/black" />
 
     <TextView
         android:id="@+id/tvTitle"
         android:layout_width="wrap_content"
-        android:layout_height="48dp"
+        android:layout_height="wrap_content"
         android:gravity="center"
         android:layout_below="@+id/btnClose"
         android:layout_alignParentStart="true"
-        android:layout_marginLeft="@dimen/activity_margin_24dp"
+        android:layout_marginLeft="@dimen/activity_margin_16dp"
         android:text="Scan Grails QR"
         android:textColor="@android:color/black"
         android:textSize="@dimen/text_size_24"
@@ -35,6 +35,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginBottom="@dimen/activity_margin_40dp"
+        android:layout_marginTop="@dimen/activity_margin_8dp"
         android:layout_below="@+id/tvTitle"
         app:zxing_scanner_layout="@layout/custom_barcode_scanner"/>
 
