--- a/app/src/main/res/layout/flash_card_layout_back.xml
+++ b/app/src/main/res/layout/flash_card_layout_back.xml
@@ -243,7 +243,15 @@
             app:layout_constraintStart_toStartOf="@id/ivBackgroundDisabled"
             app:layout_constraintEnd_toEndOf="@id/ivBackgroundDisabled"
             android:layout_marginTop="@dimen/activity_margin_12dp"
-            android:layout_marginHorizontal="@dimen/activity_margin_34dp">
+            android:layout_marginHorizontal="@dimen/activity_margin_34dp"
+            android:gravity="center_vertical">
+
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:id="@+id/ivItemColorDisable"
+                android:layout_width="@dimen/activity_margin_16dp"
+                android:layout_height="@dimen/activity_margin_16dp"
+                android:src="@color/colorPutty"
+                android:elevation="2dp" />
 
             <View
                 android:layout_width="match_parent"
