--- a/app/src/main/res/layout/activity_collection.xml
+++ b/app/src/main/res/layout/activity_collection.xml
@@ -65,7 +65,8 @@
         android:id="@+id/rlButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="@dimen/activity_margin_34dp"
+        android:layout_marginEnd="@dimen/activity_margin_34dp"
+        android:layout_marginStart="30dp"
         android:layout_marginBottom="@dimen/activity_margin_36dp"
         android:layout_alignParentBottom="true">
 
@@ -82,7 +83,8 @@
                 android:elevation="10dp"
                 app:cardCornerRadius="6dp"
                 android:layout_margin="@dimen/activity_margin_4dp"
-                android:layout_alignParentEnd="true">
+                android:layout_alignParentEnd="true"
+                android:layout_centerVertical="true">
 
                 <TextView
                     android:id="@+id/btnItemSale"
@@ -101,31 +103,24 @@
 
             </androidx.cardview.widget.CardView>
 
-            <androidx.cardview.widget.CardView
-                android:id="@+id/cvStolen"
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:elevation="10dp"
-                app:cardCornerRadius="6dp"
-                android:layout_margin="@dimen/activity_margin_4dp"
-                android:layout_alignParentStart="true">
+                android:orientation="horizontal">
 
-                <TextView
-                    android:id="@+id/btnItemStolen"
-                    android:layout_width="130dp"
+                <ImageView
+                    android:id="@+id/btnPublicItem"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:background="@drawable/drawable_btn_red_gradient_selector"
-                    android:text="@string/label_button_stolen"
-                    android:textColor="@color/colorOffWhite"
-                    android:gravity="center"
-                    android:textStyle="bold"
-                    android:textSize="@dimen/text_size_large"
-                    android:paddingHorizontal="@dimen/activity_margin_28dp"
-                    android:paddingVertical="@dimen/activity_margin_14dp"
-                    android:drawableLeft="@drawable/ic_stolen"
-                    android:drawableTint="@android:color/white"/>
+                    android:src="@drawable/ic_btn_public_sneaker"/>
 
-            </androidx.cardview.widget.CardView>
+                <ImageView
+                    android:id="@+id/btnItemStolen"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/ic_btn_report_stolen"/>
+
+            </LinearLayout>
 
         </RelativeLayout>
 
@@ -300,6 +295,115 @@
                 android:layout_marginHorizontal="@dimen/activity_margin_24dp"
                 android:paddingVertical="@dimen/activity_margin_14dp"
                 android:layout_marginVertical="@dimen/activity_margin_24dp"/>
+
+        </LinearLayout>
+
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:animateLayoutChanges="true">
+
+        <LinearLayout
+            android:id="@+id/llConfirmPublic"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:background="@drawable/drawable_bg_bottom_view_scan"
+            android:visibility="gone">
+
+            <ImageView
+                android:id="@+id/btnClosePublic"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="end"
+                android:padding="@dimen/activity_margin_12dp"
+                android:layout_marginTop="@dimen/activity_margin_4dp"
+                android:layout_marginRight="@dimen/activity_margin_12dp"
+                android:src="@drawable/ic_close"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/dialog_title_confirm_public"
+                android:layout_marginTop="@dimen/activity_margin_4dp"
+                android:textSize="@dimen/text_size_xxlarge"
+                android:textColor="@android:color/black"
+                android:textStyle="bold"
+                android:layout_marginHorizontal="@dimen/activity_margin_24dp"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/dialog_msg_confirm_public"
+                android:layout_marginHorizontal="@dimen/activity_margin_24dp"
+                android:textColor="@android:color/black"
+                android:textSize="@dimen/text_size_default"
+                android:layout_marginTop="@dimen/activity_margin_4dp"/>
+
+            <TextView
+                android:id="@+id/btnConfirmPublic"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/drawable_btn_orange_gradient_selector"
+                android:text="@string/label_button_confirm_stolen"
+                android:textColor="@color/colorOffWhite"
+                android:gravity="center"
+                android:textStyle="bold"
+                android:textSize="@dimen/text_size_large"
+                android:layout_marginHorizontal="@dimen/activity_margin_24dp"
+                android:paddingVertical="@dimen/activity_margin_14dp"
+                android:layout_marginVertical="@dimen/activity_margin_24dp"/>
+
+        </LinearLayout>
+
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:animateLayoutChanges="true">
+
+        <LinearLayout
+            android:id="@+id/llReportSuccess"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:background="@drawable/drawable_bg_bottom_view_scan"
+            android:visibility="gone">
+
+            <ImageView
+                android:id="@+id/btnCloseReportSuccess"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="end"
+                android:padding="@dimen/activity_margin_12dp"
+                android:layout_marginTop="@dimen/activity_margin_4dp"
+                android:layout_marginRight="@dimen/activity_margin_12dp"
+                android:src="@drawable/ic_close"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/dialog_title_report_success"
+                android:layout_marginTop="@dimen/activity_margin_4dp"
+                android:textSize="@dimen/text_size_xxlarge"
+                android:textColor="@android:color/black"
+                android:textStyle="bold"
+                android:layout_marginHorizontal="@dimen/activity_margin_24dp"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/dialog_msg_report_success"
+                android:layout_marginHorizontal="@dimen/activity_margin_24dp"
+                android:textColor="@android:color/black"
+                android:textSize="@dimen/text_size_default"
+                android:layout_marginTop="@dimen/activity_margin_4dp"
+                android:layout_marginBottom="@dimen/activity_margin_32dp"/>
 
         </LinearLayout>
 
