fix bug, change model sneaker history

--- a/app/src/main/res/layout/flash_card_layout_back.xml
+++ b/app/src/main/res/layout/flash_card_layout_back.xml
@@ -302,6 +302,7 @@
         </LinearLayout>
 
         <TextView
+            android:id="@+id/tvFurtherSpecDisable"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_marginHorizontal="@dimen/activity_margin_34dp"
