--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -1,43 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/white">
+    android:background="@android:color/white"
+    android:id="@+id/fl_transfer_content">
 
-    <include layout="@layout/layout_header" />
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior"
-        android:paddingTop="@dimen/activity_margin_16dp">
-
-        <TextView
-            android:id="@+id/tvChangePassword"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/label_setting_change_password"
-            android:paddingStart="@dimen/activity_margin_16dp"
-            android:paddingEnd="@dimen/activity_margin_16dp"
-            android:paddingTop="@dimen/activity_margin_12dp"
-            android:paddingBottom="@dimen/activity_margin_12dp"
-            android:drawableStart="@drawable/ic_password"
-            android:drawablePadding="@dimen/activity_margin_8dp"
-            android:textColor="@color/colorBlack"
-            android:background="?attr/selectableItemBackground"
-            android:gravity="center_vertical"
-            android:textSize="@dimen/text_size_large"/>
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="@color/lightGrey"
-            android:layout_marginStart="@dimen/activity_margin_16dp"
-            android:layout_marginEnd="@dimen/activity_margin_16dp"/>
-
-    </LinearLayout>
-
-</androidx.coordinatorlayout.widget.CoordinatorLayout>
+</RelativeLayout>
